# faultfix

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
docs/: judge-demo.md
hosted-ranking-space/: README.md  app.py  faultfix_policy.py  requirements.txt
scripts/: sync-space.ps1  verify-authority-simulator.py  verify-faultfix-cli.py
src/app/: advisory-ranking.module.css  globals.css  layout.tsx  page.module.css  page.tsx  phase2.module.css
src/lib/: agent-lab.test.ts  agent-lab.ts  evidence-firewall.test.ts  evidence-firewall.ts  hosted-ranking.test.ts  hosted-ranking.ts  investigation.test.ts  investigation.ts  local-ranking.test.ts  local-ranking.ts
