[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "faultfix"
version = "0.1.0"
description = "Offline evidence-bound authority preflight for AI incident agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Faultfix contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
]

[project.scripts]
faultfix = "faultfix_policy:main"

[tool.setuptools]
package-dir = { "" = "hosted-ranking-space" }
py-modules = ["faultfix_policy"]
